[metadata]
name = Lektor-Open-Graph
version = attr: lektor_open_graph.__version__
url = https://github.com/davidism/lektor-open-graph/
license = BSD
license_file = LICENSE
author = David Lord
author_email = davidism@gmail.com
description = Add Open Graph tags to Lektor pages.
long_description = file: README.rst
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
py_modules = lektor_open_graph
include_package_data = True

[options.entry_points]
lektor.plugins =
  open-graph = lektor_open_graph:OpenGraph

[aliases]
release = egg_info -D -b ''

[egg_info]
tag_build = dev

[bdist_wheel]
universal = True

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    lektor_open_graph

[coverage:paths]
source =
    lektor_open_graph
    .tox/*/lib/python*/site-packages/lektor_open_graph
